styles.css
.path-local-dev .devscloud {
    border: 1px solid #efefef;
    background-color: white;
    padding: 1em;
}

.path-local-dev .box.versionselector {
    width: 60%;
    text-align: center;
    margin-left: auto;
    margin-right: auto;
}

.path-local-dev .box.versionselector label {
    margin-left: 1ex;
    margin-right: 1ex;
}

.path-local-dev .initialbar a,
.path-local-dev .initialbar strong {
    margin-left: 0.3em;
}

.path-local-dev table.flexible {
    margin-left: auto;
    margin-right: auto;
}

.path-local-dev table.flexible td {
    text-align: center;
}

.path-local-dev table.flexible td.c1,
.path-local-dev table.flexible td.c2,
.path-local-dev table.flexible td.c3,
.path-local-dev table.flexible td.c4 {
    text-align: left;
}

.path-local-dev table.flexible td.c0 {
    padding: 3px;
}

.path-local-dev table.flexible tr:hover td {
    background-color: #efefef;
}

.path-local-dev pre.gitcommit {
    width: 80%;
    margin: 0.2em auto;
    background-color: white;
    border: 1px solid #efefef;
    padding: 0.5em;
    white-space: pre-wrap;
}

.path-local-dev .generalbox {
    width: 80%;
    margin-left: auto;
    margin-right: auto;
    background-color: white;
}

